src/test/deca/context/invalid/created/declVar/FLOAT_no_identifier.deca
// Description:
//  Assign un float sans identier
// 
// Resultats:
//    Ligne 8 : identifier not defined

{
    float;
}